edited and created templates for login

--- a/admin/app/templates/index.html
+++ b/admin/app/templates/index.html
@@ -1,4 +1,9 @@
 {% extends 'admin/master.html' %}
+{% block head %}
+<title>
+Edanaga - Administration
+</title>
+{% endblock %}
 
 {% block body %}
 <div class="container">
