--- a/unity/app/templates/unity.html
+++ b/unity/app/templates/unity.html
@@ -13,6 +13,7 @@
     </script>
 </head>
 <body>
+<!-- TODO: use the index template and whatever backgrounds should use #428bca as a color Eawag blue -->
 <div class="webgl-content">
   <div id="unityContainer" style="width: 960px; height: 600px"></div>
   <div class="footer">
